--- a/lab_11_methods.ipynb
+++ b/lab_11_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "be11e388",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "Hello, I am a Student!\n",
-      "Hello, I am {Madinabonu.Jaloldinova}) my index number is {35485} \n"
+      "Hello, I am Madinabonu Jaloldinova my index number is 35485 \n"
      ]
     }
    ],
@@ -30,11 +30,19 @@
     "    self.index = index \n",
     "\n",
     "  def hello (self):\n",
-    "    print(\"Hello, I am {Madinabonu.Jaloldinova}) my index number is {35485} \")\n",
+    "    print(f\"Hello, I am {self.name} my index number is {self.index} \")\n",
     "\n",
     "student2= Student(\"Madinabonu Jaloldinova\", 35485)\n",
     "student2.hello() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ecc7504",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
