--- a/polymorphism.ipynb
+++ b/polymorphism.ipynb
@@ -1,28 +1,89 @@
-class Animal:
-    def make_sound(self):
-        pass
-
-class Dog(Animal):
-    def make_sound(self):
-        return "Woof!"
-
-class Cat(Animal):
-    def make_sound(self):
-        return "Meow!"
-
-class Horse(Animal):
-    def make_sound(self):
-        return "Neigh!"
-
-def animal_sound(animal):
-    print(animal.make_sound())
-
-
-dog = Dog()
-cat = Cat()
-horse = Horse()
-
-
-animal_sound(dog)    
-animal_sound(cat)    
-animal_sound(horse)  
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "5f7427fb",
+   "metadata": {},
+   "source": [
+    "## Polymorphism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c45cdcd6",
+   "metadata": {},
+   "source": [
+    "### A animal class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f61dee55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n",
+      "Neigh!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def make_sound(self):\n",
+    "        pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "class Horse(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Neigh!\"\n",
+    "\n",
+    "\n",
+    "def animal_sound(animal):\n",
+    "    print(animal.make_sound())\n",
+    "\n",
+    "\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "horse = Horse()\n",
+    "\n",
+    "\n",
+    "animal_sound(dog)    \n",
+    "animal_sound(cat)    \n",
+    "animal_sound(horse)  "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
